[fr] install bootstrap-vue

--- a/frontend/theme/index.sass
+++ b/frontend/theme/index.sass
@@ -10,8 +10,8 @@ html, body
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif
   font-weight: 400
 
-// TODO: Прописать @media (медиа-запросы) для всех экранов
-.page-container
-  width: 1140px
-  padding: 0
-  margin: 0 auto
+//// TODO: Прописать @media (медиа-запросы) для всех экранов
+//.container
+//  width: 1140px
+//  padding: 0
+//  margin: 0 auto
