[fr] add list view rescomplex

--- a/frontend/theme/index.sass
+++ b/frontend/theme/index.sass
@@ -24,12 +24,12 @@ html, body
 .text-center
   text-align: center
 
-// BEGIN Animation pass between pages //
-
-.page-enter-active, .page-leave-active
-  transition: opacity .4s
-
-.page-enter, .page-leave-active
-  opacity: 0
-
-// END Animation //
+//// BEGIN Animation pass between pages //
+//
+//.page-enter-active, .page-leave-active
+//  transition: opacity .4s
+//
+//.page-enter, .page-leave-active
+//  opacity: 0
+//
+//// END Animation //
