--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -1,7 +1,7 @@
 *
   margin: 0
   padding: 0
-  box-sizing: border-box
+  box-sizing: border-box!important
 
 html, body
   margin: 0
@@ -25,30 +25,55 @@ html, body
 //
 //// END Animation //
 
+.my-40
+  margin-top: 40px
+  margin-bottom: 40px
+
 .mx-auto
   margin-left: auto
   margin-right: auto
 
+.ivu-col
+  padding-left: 8px
+  padding-right: 8px
+
 @media only screen and (max-width: 576px)
   .container
     width: 100%
+  .ivu-row
+    margin-left: 0!important
+    margin-right: 0!important
+    .ivu-col
+      margin-left: 0!important
+      margin-right: 0!important
+
 
 @media only screen and (min-width: 576px) and (max-width: 768px)
   .container
     width: 576px
+    margin-left: auto
+    margin-right: auto
 
 @media only screen and (min-width: 768px) and (max-width: 992px)
   .container
     width: 768px
+    margin-left: auto
+    margin-right: auto
 
 @media only screen and (min-width: 992px) and (max-width: 1200px)
   .container
     width: 992px
+    margin-left: auto
+    margin-right: auto
 
 @media only screen and (min-width: 1200px) and (max-width: 1600px)
   .container
     width: 1200px
+    margin-left: auto
+    margin-right: auto
 
 @media only screen and (min-width: 1600px)
   .container
-    width: 1600px
+    width: 1200px
+    margin-left: auto
+    margin-right: auto
