[fr3] min change MainView

--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -11,8 +11,8 @@ html, body
   font-weight: 400
 
 
-//.text-center
-//  text-align: center
+.text-center
+  text-align: center
 
 
 //// BEGIN Animation pass between pages //
