add field model and [fr3] main page

--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -9,6 +9,7 @@ html, body
   height: 100%
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif
   font-weight: 400
+  background: #f2f4f6
 
 
 .text-center
@@ -36,7 +37,6 @@ html, body
 .ivu-col
   padding-left: 8px
   padding-right: 8px
-
 
 @media only screen and (max-width: 576px)
   .container
