--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -40,6 +40,12 @@ html, body
   padding-left: 8px
   padding-right: 8px
 
+
+.fotorama .fotorama__nav--thumbs .fotorama__nav__frame
+  margin-right: 2px !important
+.fotorama__thumb-border
+  width: 62px !important
+
 @media only screen and (max-width: 576px)
   .container
     width: 100%
