bug fix load scripts for fotorama

--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -40,11 +40,12 @@ html, body
   padding-left: 8px
   padding-right: 8px
 
-
+// Fotorama //
 .fotorama .fotorama__nav--thumbs .fotorama__nav__frame
   margin-right: 2px !important
 .fotorama__thumb-border
   width: 62px !important
+// END Fotorama //
 
 @media only screen and (max-width: 576px)
   .container
