change api on axios

--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -9,8 +9,10 @@ html, body
   height: 100%
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif
   font-weight: 400
-  background: #f2f4f6
+  //background: #f2f4f6
 
+.bg-color-light-gray
+  background: #f2f4f6
 
 .text-center
   text-align: center
@@ -27,6 +29,15 @@ html, body
 //  opacity: 0
 //
 //// END Animation //
+
+.fz-12
+  font-size: 12px
+
+.mt-3
+  margin-top: 30px
+
+.my-1
+  margin: 10px 0
 
 .my-40
   margin-top: 40px
