--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -16,6 +16,8 @@ html, body
 
 .text-center
   text-align: center
+.text-right
+  text-align: right
 
 .hidden
   display: none
@@ -35,10 +37,15 @@ html, body
 
 .mt-3
   margin-top: 30px
+.mb-25
+  margin-bottom: 25px
+.mb-3
+  margin-bottom: 30px
 
 .my-1
   margin: 10px 0
-
+.my-20
+  margin: 20px 0
 .my-40
   margin-top: 40px
   margin-bottom: 40px
