[bk2 fr3] change search through store

--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -10,6 +10,7 @@ html, body
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif
   font-weight: 400
   //background: #f2f4f6
+  --swiper-theme-color: none
 
 .bg-color-light-gray
   background: #f2f4f6
@@ -37,6 +38,8 @@ html, body
 
 .mt-3
   margin-top: 30px
+.mb-2
+  margin-bottom: 20px
 .mb-25
   margin-bottom: 25px
 .mb-3
