[bk2 fr3] add swichTagVisible

--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -11,6 +11,7 @@ html, body
   font-weight: 400
   //background: #f2f4f6
   --swiper-theme-color: none
+  user-select: none
 
 .bg-color-light-gray
   background: #f2f4f6
