[bk2 fr3] add ordering on page commerce

--- a/frontend_3/theme/index.sass
+++ b/frontend_3/theme/index.sass
@@ -50,6 +50,8 @@ html, body
   margin: 10px 0
 .my-20
   margin: 20px 0
+.my-3
+  margin: 30px 0
 .my-40
   margin-top: 40px
   margin-bottom: 40px
@@ -68,6 +70,25 @@ html, body
 .fotorama__thumb-border
   width: 62px !important
 // END Fotorama //
+
+
+.cust-select-order-commerce-page
+  width: auto
+  padding-right: 18px
+  border-radius: 4px
+  .ivu-select-selection
+    border: none !important
+    box-shadow: none !important
+    background-color: rgba(255, 255, 255, 0)
+  .ivu-icon.ivu-icon-ios-arrow-down.ivu-select-arrow
+    right: -10px
+  //  display: none
+  .ivu-select-head-with-prefix.ivu-select-selected-value
+    padding-right: 10px
+  &:hover
+    background: #EDEFF0
+.cust-select-order-commerce-page.ivu-select-visible
+  background: #EDEFF0
 
 @media only screen and (max-width: 576px)
   .container
